--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "express" : "~4.14.0",
     "mongodb" : "~2.2.4",
     "mongoose" : "~4.5.7",
+    "frisby" : "~0.8.5",
     "async" : "2.0.1"
   }
 }
